--- a/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/core.entity_view_display.paragraph.webform.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/core.entity_view_display.paragraph.webform.default.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.webform.field_webform_webform
+    - field.field.paragraph.webform.field_prgf_webform
     - paragraphs.paragraphs_type.webform
   module:
     - webform
@@ -11,9 +11,9 @@ targetEntityType: paragraph
 bundle: webform
 mode: default
 content:
-  field_webform_webform:
+  field_prgf_webform:
     weight: 0
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: webform_entity_reference_entity_view
