[YGH-522] make field_menu_block_links and field_prgf_block_ref required abd translatabe

--- a/config/install/field.field.paragraph.microsites_menu.field_prgf_block_ref.yml
+++ b/config/install/field.field.paragraph.microsites_menu.field_prgf_block_ref.yml
@@ -12,7 +12,7 @@ bundle: microsites_menu
 label: 'Menu Block'
 description: 'Create a new one or pick up an existed menu block.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
