[YGH-522] update empty text in events paragraph

--- a/openy_prgf_all_events/config/install/views.view.events_default.yml
+++ b/openy_prgf_all_events/config/install/views.view.events_default.yml
@@ -427,7 +427,7 @@ display:
           empty: true
           tokenize: false
           content:
-            value: '<div class="no-results-text">No events found by this search conditions.</div>'
+            value: '<div class="no-results-text">No events found by these search conditions.</div>'
             format: html
           plugin_id: text
       relationships: {  }
