[MInor-Fix][366] Add textfield to the "Small Banner”.
[Minor-Fix][366] Add hook update and test also documentation.

[Minor-Fix][366] Update feature small banner.

Update hook update

Add doc information

[366] Add fix to tests

[366] Fix check for description in template.

[Minor-Fix][366] Fix template.

[Minor-Fix][366] Move to variable description array in template.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_small_banner/config/install/core.entity_form_display.paragraph.small_banner.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_small_banner/config/install/core.entity_form_display.paragraph.small_banner.default.yml
@@ -4,11 +4,13 @@ dependencies:
   config:
     - entity_browser.browser.images_library
     - field.field.paragraph.small_banner.field_prgf_color
+    - field.field.paragraph.small_banner.field_prgf_description
     - field.field.paragraph.small_banner.field_prgf_headline
     - field.field.paragraph.small_banner.field_prgf_image
     - paragraphs.paragraphs_type.small_banner
   module:
     - entity_browser
+    - text
 id: paragraph.small_banner.default
 targetEntityType: paragraph
 bundle: small_banner
@@ -19,6 +21,15 @@ content:
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_prgf_description:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_prgf_headline:
     type: string_textfield
     weight: 0
@@ -26,6 +37,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   field_prgf_image:
     type: entity_browser_entity_reference
     weight: 1
@@ -38,6 +50,7 @@ content:
       open: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   created: true
   status: true
