--- a/modules/openy_features/openy_prgf/modules/openy_prgf_small_banner/config/install/core.entity_view_display.media.image.prgf_small_banner.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_small_banner/config/install/core.entity_view_display.media.image.prgf_small_banner.yml
@@ -24,6 +24,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
 hidden:
   created: true
   field_media_caption: true
