Resolve automerge missing coma in composer.json.

--- a/composer.json
+++ b/composer.json
@@ -177,7 +177,7 @@
         "drupal/metatag": "^1.0",
         "drupal/webform": "^5.0@beta",
         "drupal/captcha": "^1.0@beta",
-        "drupal/recaptcha": "^2.2"
+        "drupal/recaptcha": "^2.2",
         "drupal/google_tag": "1.x-dev",
         "drupal/rabbit_hole": "1.0-beta3"
     }
