--- a/openy.info.yml
+++ b/openy.info.yml
@@ -112,6 +112,7 @@ dependencies:
   - openy_prgf_schedule_search
   - openy_prgf_featured_content
   - openy_prgf_grid_content
+  - openy_prgf_group_schedules
   - openy_prgf_story_card
   - openy_prgf_promo_card
   - openy_prgf_featured_blogs
@@ -138,6 +139,7 @@ dependencies:
   # OpenY custom modules
   - openy_branch_selector
   - openy_field_hours
+  - openy_group_schedules
   - openy_hf
   - openy_hours_formatter
   - openy_migrate
