--- a/composer.json
+++ b/composer.json
@@ -122,6 +122,9 @@
             },
             "drupal/datalayer": {
                 "2857270 - Entity reference field selected causing Fatal Error": "https://www.drupal.org/files/issues/2857270-4-fix-entity-reference-field-using-name-property.patch"
+            },
+            "drupal/admin_toolbar": {
+                "2838636 - Issue with z-index of dropdown in horizontal tray": "https://www.drupal.org/files/issues/admin_toolbar-2838636-10.patch"
             }
         }
     },
@@ -177,6 +180,6 @@
         "drupal/metatag": "^1.0",
         "drupal/google_tag": "1.x-dev",
         "drupal/rabbit_hole": "1.0-beta3",
-        "drupal/admin_toolbar": "1.x-dev"
+        "drupal/admin_toolbar": "1.19"
     }
 }
