[OYPD-28] Add scheduler config to alert, class and program subcategory node types, remove duplicate entry from composer.json and update composer.lock

--- a/composer.json
+++ b/composer.json
@@ -176,11 +176,10 @@
         "drupal/simple_sitemap": "^2.8",
         "drupal/redirect": "^1.0@alpha",
         "drupal/metatag": "^1.0",
-        "drupal/scheduler": "^1.0@alpha",
+        "drupal/scheduler": "^1.0@RC",
         "drupal/webform": "^5.0@beta",
         "drupal/captcha": "^1.0@beta",
         "drupal/recaptcha": "^2.2",
-        "drupal/google_tag": "1.x-dev",
         "drupal/rabbit_hole": "1.0-beta3"
     }
 }
