--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_form_display.node.class.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_form_display.node.class.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - metatag
     - paragraphs
     - path
+    - scheduler
     - text
 third_party_settings:
   field_group:
@@ -162,6 +163,11 @@ content:
     weight: 8
     third_party_settings: {  }
     region: content
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
@@ -186,4 +192,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
