--- a/openy.info.yml
+++ b/openy.info.yml
@@ -83,6 +83,7 @@ dependencies:
   - captcha
   - image_captcha
   - recaptcha
+  - colorbutton
   # OpenY features.
   - openy_media_image
   - openy_media_document
