--- a/modules/openy_features/openy_prgf/modules/openy_prgf_classes_listing/config/install/core.entity_view_display.paragraph.classes_listing_filters.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_classes_listing/config/install/core.entity_view_display.paragraph.classes_listing_filters.default.yml
@@ -17,6 +17,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: plugin_block_built
+    region: content
 hidden:
   created: true
   uid: true
