--- a/modules/openy_features/openy_prgf/modules/openy_prgf_classes_listing/openy_prgf_classes_listing.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_classes_listing/openy_prgf_classes_listing.info.yml
@@ -1,5 +1,5 @@
-name: 'OpenY paragraph classes listing'
-description: 'OpenY paragraph classes listing'
+name: 'OpenY Paragraph Classes Listing'
+description: 'OpenY Paragraph Classes Listing'
 type: module
 core: 8.x
 dependencies:
@@ -12,4 +12,4 @@ dependencies:
   - user
   - verf
   - views
-version: 8.x-1.1
+version: 8.x-1.2
