--- a/modules/openy_features/openy_prgf/modules/openy_prgf_pgm_reg/openy_prgf_pgm_reg.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_pgm_reg/openy_prgf_pgm_reg.info.yml
@@ -3,7 +3,7 @@ description: 'Provide a paragraph with a Program Registration Block for Landing 
 type: module
 core: 8.x
 dependencies:
-  - content_moderation
+  - openy_programs_search
   - field
   - paragraphs
   - plugin
