--- a/openy_prgf_fin/openy_prgf_fin.info.yml
+++ b/openy_prgf_fin/openy_prgf_fin.info.yml
@@ -6,6 +6,7 @@ dependencies:
   - content_moderation
   - field
   - openy_prgf_3c
+  - openy_webform
   - paragraphs
   - webform
-version: 8.x-1.1
+version: 8.x-1.2
