--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
         "emuse/behat-html-formatter": "^0.1.0",
-        "drupal/tqextension": "dev-drupal-8",
-        "cevou/behat-screenshot-compare-extension": "^1.0@dev"
+        "drupal/tqextension": "dev-drupal-8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -101,13 +100,13 @@
             "@cibox-build",
             "@cibox-vm",
             "@docksal",
-            "sh scripts/remove_vendor_git_folders.sh || :"
+            "bash scripts/remove_vendor_git_folders.sh || :"
         ],
         "post-update-cmd": [
             "@cibox-build",
             "@cibox-vm",
             "@docksal",
-            "sh scripts/remove_vendor_git_folders.sh || :"
+            "bash scripts/remove_vendor_git_folders.sh || :"
         ],
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "cibox-build": "[ -d ./vendor/ymcatwincities/openy-cibox-build ] && (rsync -r --exclude=composer.json --exclude=.gitignore --exclude=.git ./vendor/ymcatwincities/openy-cibox-build/ ./docroot) || (rm -rf ./docroot/devops ./docroot/*.sh ./docroot/*.yml ./docroot/*.md ./docroot/ansible.cfg)",
