--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
         "emuse/behat-html-formatter": "^0.1.0",
-        "drupal/tqextension": "dev-drupal-8",
-        "cevou/behat-screenshot-compare-extension": "^1.0@dev"
+        "drupal/tqextension": "dev-drupal-8"
     },
     "config": {
         "bin-dir": "bin/",
@@ -117,10 +116,10 @@
     "scripts": {
         "post-install-cmd": [
             "@composer drupal-scaffold",
-            "sh scripts/remove_openy_docroot_folder.sh || :"
+            "bash scripts/remove_openy_docroot_folder.sh || :"
         ],
         "post-update-cmd": [
-            "sh scripts/remove_openy_docroot_folder.sh || :"
+            "bash scripts/remove_openy_docroot_folder.sh || :"
         ],
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
     },
