--- a/openy_prgf_timeline/config/install/field.field.paragraph.timeline.field_prgf_timeline.yml
+++ b/openy_prgf_timeline/config/install/field.field.paragraph.timeline.field_prgf_timeline.yml
@@ -4,19 +4,24 @@ dependencies:
   config:
     - field.storage.paragraph.field_prgf_timeline
     - paragraphs.paragraphs_type.timeline
+    - taxonomy.vocabulary.timelines
 id: paragraph.timeline.field_prgf_timeline
 field_name: field_prgf_timeline
 entity_type: paragraph
 bundle: timeline
-label: 'Timeline View'
-description: 'Timeline view'
+label: Timeline
+description: 'Select term to filter timeline by.'
 required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:view'
+  handler: 'default:taxonomy_term'
   handler_settings:
-    target_bundles: null
+    target_bundles:
+      timelines: timelines
+    sort:
+      field: _none
     auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
