--- a/openy_prgf_timeline/config/install/core.entity_form_display.paragraph.timeline.default.yml
+++ b/openy_prgf_timeline/config/install/core.entity_form_display.paragraph.timeline.default.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.timeline.field_prgf_timeline
-    - field.field.paragraph.timeline.field_prgf_timeline_queue
     - paragraphs.paragraphs_type.timeline
   module:
     - content_moderation
@@ -12,14 +11,13 @@ targetEntityType: paragraph
 bundle: timeline
 mode: default
 content:
-  field_prgf_timeline_queue:
-    weight: 0
+  field_prgf_timeline:
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
 hidden:
   created: true
-  field_prgf_timeline: true
   status: true
   uid: true
