--- a/openy_prgf_timeline/config/install/views.view.timeline.yml
+++ b/openy_prgf_timeline/config/install/views.view.timeline.yml
@@ -4,12 +4,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - node.type.blog
+    - taxonomy.vocabulary.timelines
   module:
     - node
     - user
     - views_timelinejs
-id: timeline_demo
-label: 'TimeLine DEMO'
+id: timeline
+label: TimeLine
 module: views
 description: ''
 tag: ''
@@ -384,6 +385,41 @@ display:
           id: field_blog_timelines_target_id
           table: node__field_blog_timelines
           field: field_blog_timelines_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: 'not found'
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: true
+          validate:
+            type: 'entity:taxonomy_term'
+            fail: 'not found'
+          validate_options:
+            bundles:
+              timelines: timelines
+            operation: view
+            multiple: 0
+            access: false
+          break_phrase: false
+          not: false
           plugin_id: numeric
       display_extenders: {  }
       filter_groups:
@@ -445,6 +481,8 @@ display:
     display_options:
       display_extenders: {  }
       block_description: Timeline
+      allow:
+        items_per_page: false
     cache_metadata:
       max-age: -1
       contexts:
