--- a/openy_prgf_mc/openy_prgf_mc.info.yml
+++ b/openy_prgf_mc/openy_prgf_mc.info.yml
@@ -5,6 +5,7 @@ core: 8.x
 dependencies:
   - content_moderation
   - field
+  - language
   - paragraphs
   - plugin
-version: '8.x-1.0'
+version: 8.x-1.1
