--- a/docroot/modules/contrib/confi/config_import.info.yml
+++ b/docroot/modules/contrib/confi/config_import.info.yml
@@ -4,8 +4,11 @@ package: Configuration
 type: module
 # core: 8.x
 
-# Information added by Drupal.org packaging script on 2016-12-08
-version: '8.x-1.1'
+test_dependencies:
+  - features (>=8.x-3.x-dev)
+
+# Information added by Drupal.org packaging script on 2017-05-15
+version: '8.x-1.4'
 core: '8.x'
 project: 'confi'
-datestamp: 1481157485
+datestamp: 1494826092
