--- a/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
@@ -70,6 +70,14 @@ ymca_retention.settings_branches:
   requirements:
     _permission: 'administer retention campaign'
 
+ymca_retention.settings_copy:
+  path: '/admin/config/system/ymca-retention/copy'
+  defaults:
+    _form: '\Drupal\ymca_retention\Form\SettingsCopyForm'
+    _title: 'YMCA Retention Copy Settings'
+  requirements:
+    _permission: 'administer retention campaign'
+
 ymca_retention.settings_cron:
   path: '/admin/config/system/ymca-retention/cron'
   defaults:
