--- a/modules/openy_features/openy_media/modules/openy_media_image/config/install/field.field.media.image.field_media_image.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_image/config/install/field.field.media.image.field_media_image.yml
@@ -23,7 +23,7 @@ settings:
   max_resolution: ''
   min_resolution: ''
   alt_field: true
-  alt_field_required: false
+  alt_field_required: true
   title_field: false
   title_field_required: false
   default_image:
