--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
         "emuse/behat-html-formatter": "^0.1.0",
-        "drupal/tqextension": "dev-drupal-8"
+        "drupal/tqextension": "dev-drupal-8",
+        "consolidation/robo": "^1.1.5"
     },
     "config": {
         "bin-dir": "bin/",
